update path content

--- a/Content/posts/стиль для блоков кода.md
+++ b/Content/posts/стиль для блоков кода.md
@@ -1,9 +1,9 @@
 ---
 date: 2023-10-23 12:46
 description: делаем красивым блоки кода в блоге
-tags:
+tags: 
+path: code-block-style
 ---
-
 # Стиль для блоков кода
 
 Всяко стало лучше)) Но нет пределу совершенства - можно еще красиво раскрашивать цветами именно swift-код, но этим займемся попозже. 
@@ -16,5 +16,6 @@ tags:
 
 ![](https://habrastorage.org/webt/xy/z1/iv/xyz1ivi95ufvb2cexjstvdgbbzu.png)
 
-## Связанные заметки 
-[Наводим красоту в блоге(карта)](/posts/discover-blog-style)
+## Куда дальше?
+[[стиль блога]]
+
