--- a/Content/posts/персональный домен.md
+++ b/Content/posts/персональный домен.md
@@ -1,7 +1,8 @@
 ---
 date: 2023-10-13 14:34
 description: и где посмотреть занят ли домен с вашей фамилией?
-tags:
+tags: 
+path: my-personal-domain
 ---
 # Зачем может быть нужен свой домен?
 
@@ -21,11 +22,9 @@ https://domains.webmoney.ru 
 
 Возможно кто-то, с такой же фамилией, как у вас, прочитает этот пост и зарегистрирует домен)))
 
-# Зачем нужен свой домен
-
-И правда зачем? А особенно со своей фамилией или именем. Пофантазирую на тему. 
-
 ![](https://habrastorage.org/webt/1q/uc/qj/1qucqjfzgms_lrkipirmjjkdbi8.png)
 
 [Обсудить в Tg >>](https://t.me/serg_popyvanov_blog/6)
 
+## Связанные заметки
+[[настройка swift server блога на jino.ru]]
