--- a/Content/posts/стиль блога.md
+++ b/Content/posts/стиль блога.md
@@ -2,10 +2,10 @@
 date: 2023-10-23 14:34
 description: навигация по статьям для наведения красоты в блоге
 tags:
-  - карта
+path: discover-blog-style
 ---
 # Стиль блога
 Здесь будет навигация по заметкам, связанным с наведением красоты в блоге
 
-[Стилизуем блоки кода](/posts/code-block-style)
-[Адаптируем шапку сайта под мобилки](/posts/HTML-adaptive-tables)
+[Стилизуем блоки кода](/posts/code-block-style) [[стиль для блоков кода]]
+[Адаптируем шапку сайта под мобилки](/posts/HTML-adaptive-tables) [[адаптивные таблицы в HTML]]
