добавлены отступы и карта

--- a/Content/posts/куда дальше.md
+++ b/Content/posts/куда дальше.md
@@ -10,3 +10,13 @@ path: discover
 Мне будет приятно, если ты [напишешь мне](https://t.me/serg_popyvanov) и запросишь интересующую статью. 
 
 А пока можно открыть  [главную страницу](https://s.popyvanov.ru) и почитать последние заметки 
+
+## Как настроить себе такой же блог
+Когда хочешь аналог Publish от Obsidian но своими руками )))
+[[настройка swift server блога на jino.ru]]
+
+[[автоматическая публикация сайта с использованием Github Actions]]
+
+[[стиль блога]]
+
+[[персональный домен]]
