--- a/Content/posts/стиль блога.md
+++ b/Content/posts/стиль блога.md
@@ -7,5 +7,6 @@ path: discover-blog-style
 # Стиль блога
 Здесь будет навигация по заметкам, связанным с наведением красоты в блоге
 
-[Стилизуем блоки кода](/posts/code-block-style) [[стиль для блоков кода]]
-[Адаптируем шапку сайта под мобилки](/posts/HTML-adaptive-tables) [[адаптивные таблицы в HTML]]
+[[стиль для блоков кода]]
+
+[[адаптивные таблицы в HTML]]
