новая статья про вики ссылки

--- a/Content/posts/куда дальше.md
+++ b/Content/posts/куда дальше.md
@@ -1,6 +1,6 @@
 ---
 date: 2023-10-23 14:34
-description: описание статьи
+description: входная точка, из нее можно попасть в любую страницу блога
 tags: 
 path: discover
 ---
@@ -10,6 +10,8 @@ path: discover
 Мне будет приятно, если ты [напишешь мне](https://t.me/serg_popyvanov) и запросишь интересующую статью. 
 
 А пока можно открыть  [главную страницу](https://s.popyvanov.ru) и почитать последние заметки 
+
+Когда-нибудь здесь появится граф как в Obsidian
 
 ## Как настроить себе такой же блог
 Когда хочешь аналог Publish от Obsidian но своими руками )))
