--- a/Content/posts/куда дальше.md
+++ b/Content/posts/куда дальше.md
@@ -13,9 +13,14 @@ path: discover
 
 Когда-нибудь здесь появится граф как в Obsidian
 
+Моя интерпретация **цифрового сада** - пространство, в котором каждая заметка продолжает жизнь после публикации.
+- заметку могу дополнить/разделить/удалить
+- внутри заметки могу сослаться на другие статьи и наоборот
+- связанность заметок между собой, поможет найти нужный материал войдя в одну из заметок
+ 
 ## Как настроить себе такой же блог
 Когда хочешь аналог Publish от Obsidian но своими руками )))
-[[настройка swift server блога на jino.ru]]
+[[настройка swift server блога]]
 
 [[автоматическая публикация сайта с использованием Github Actions]]
 
