--- a/Content/posts/персональный домен.md
+++ b/Content/posts/персональный домен.md
@@ -27,4 +27,4 @@ https://domains.webmoney.ru 
 [Обсудить в Tg >>](https://t.me/serg_popyvanov_blog/6)
 
 ## Связанные заметки
-[[настройка swift server блога на jino.ru]]
+[[настройка swift server блога]]
