добавление about информации

--- a/Content/posts/куда дальше.md
+++ b/Content/posts/куда дальше.md
@@ -9,7 +9,7 @@ path: discover
 Скорее всего вы перешли на эту страницу, потому что я оставил ссылку на статью, но не опубликовал ее. 
 Мне будет приятно, если ты [напишешь мне](https://t.me/serg_popyvanov) и запросишь интересующую статью. 
 
-А пока можно открыть  [главную страницу](https://s.popyvanov.ru) и почитать последние заметки 
+А пока можно открыть [главную страницу](https://s.popyvanov.ru) и почитать последние заметки или почитать [[обо мне]], если мы не знакомы
 
 Когда-нибудь здесь появится граф как в Obsidian
 
