новая статья netlify

--- a/Content/posts/куда дальше.md
+++ b/Content/posts/куда дальше.md
@@ -20,6 +20,9 @@ path: discover
  
 ## Как настроить себе такой же блог
 Когда хочешь аналог Publish от Obsidian но своими руками )))
+
+[[бесплатный генератор Swift Publish блога на Netlify]] - начать лучше отсюда
+
 [[настройка swift server блога]]
 
 [[автоматическая публикация сайта с использованием Github Actions]]
