update куда дальше

--- a/Content/posts/куда дальше.md
+++ b/Content/posts/куда дальше.md
@@ -7,9 +7,9 @@ path: discover
 # Куда дальше?
 
 Скорее всего вы перешли на эту страницу, потому что я оставил ссылку на статью, но не опубликовал ее. 
-Мне будет приятно, если ты [напишешь мне](https://t.me/serg_popyvanov) и запросишь интересующую статью. 
+Можно [написать мне](https://t.me/serg_popyvanov) и запросить эту заметку. 
 
-А пока можно открыть [главную страницу](https://s.popyvanov.ru) и почитать последние заметки или почитать [[обо мне]], если мы не знакомы
+А пока можно открыть [главную страницу](https://s.popyvanov.ru), чтобы почитать последние заметки или посмотреть информацию [[обо мне]], если мы не знакомы
 
 Когда-нибудь здесь появится граф как в Obsidian
 
