--- a/Content/posts/куда дальше.md
+++ b/Content/posts/куда дальше.md
@@ -23,6 +23,8 @@ path: discover
 
 [[бесплатный генератор Swift Publish блога на Netlify]] - начать лучше отсюда
 
+[[процесс публикации статьи в Swift Publish]]
+
 [[настройка swift server блога]]
 
 [[автоматическая публикация сайта с использованием Github Actions]]
@@ -30,3 +32,7 @@ path: discover
 [[стиль блога]]
 
 [[персональный домен]]
+
+## Что можно накрутить в Obsidian
+
+[[сворачивающийся дневник - экстракт главных событий]]
