SEO-оптимизация: редактирование описания статей для индексирования поисковиков

--- a/Content/posts/куда дальше.md
+++ b/Content/posts/куда дальше.md
@@ -26,7 +26,15 @@ path: discover
 [[настройка swift server блога]]  
 [[автоматическая публикация сайта с использованием Github Actions]]  
 [[стиль блога]]  
-[[персональный домен]]
+[[персональный домен]]  
+[[как помочь поисковикам найти ваш сайт SEO]]  
 
 ## Что можно накрутить в Obsidian
+Для продвинутого использования и просто подчерпнуть идей:  
+
 [[сворачивающийся дневник - экстракт главных событий]]
+
+
+## Полезно
+
+[[настройка vpn на vps хостинге с помощью Amnezia]]  
