--- a/Content/posts/обо мне.md
+++ b/Content/posts/обо мне.md
@@ -1,12 +1,12 @@
 ---
 date: 2023-10-27 15:37
-description: 
+description: Попыванов Сергей Геннадьевич. Биография. Контакты. Резюме. Социальные сети.
 tags: 
 path: about-popyvanov-sergey
 ---
 # Обо мне
 
-iOS-разработчик в Авито с января 2022. Живу в Самаре. В мобильную разработку залетел в феврале 2020 года. 
+iOS-разработчик в Авито с января 2022. Живу в Самаре. В мобильную разработку залетел в феврале 2020 года.  
 
 ![](https://habrastorage.org/webt/qc/94/my/qc94myyqvg61tjljzvqlma_r-mq.png)
 
