--- a/Content/posts/персональный домен.md
+++ b/Content/posts/персональный домен.md
@@ -1,6 +1,6 @@
 ---
 date: 2023-10-13 14:34
-description: и где посмотреть занят ли домен с вашей фамилией?
+description: зачем нужен свой домен? Красивая почта, оформление портфолио, личный блог, сайт-визитка
 tags: 
 path: my-personal-domain
 ---
