--- a/Content/posts/стиль блога.md
+++ b/Content/posts/стиль блога.md
@@ -1,13 +1,18 @@
 ---
 date: 2023-10-23 14:34
-description: навигация по статьям для наведения красоты в блоге
-tags:
+description: навигация по статьям для наведения красоты в Publish Swift блоге
+tags: 
 path: discover-blog-style
 ---
 # Стиль блога
 Здесь будет навигация по заметкам, связанным с наведением красоты в блоге
 
 [[стиль для блоков кода]]   
-[[адаптивные таблицы в HTML]]
+[[адаптивные таблицы в HTML]]  
+[[как добавить обработку вики ссылок в блог Publish]]  
+
+
+## Куда дальше
+[[куда дальше]]
 
 
