--- a/Content/posts/стиль для блоков кода.md
+++ b/Content/posts/стиль для блоков кода.md
@@ -1,6 +1,6 @@
 ---
 date: 2023-10-23 12:46
-description: делаем красивым блоки кода в блоге
+description: делаем красивым блоки кода в Publish Swift блоге
 tags: 
 path: code-block-style
 ---
@@ -17,5 +17,5 @@ path: code-block-style
 ![](https://habrastorage.org/webt/xy/z1/iv/xyz1ivi95ufvb2cexjstvdgbbzu.png)
 
 ## Куда дальше?
-[[стиль блога]]
+[[стиль блога]]  
 
