для индексации обо мне

--- a/Content/posts/обо мне.md
+++ b/Content/posts/обо мне.md
@@ -1,6 +1,6 @@
 ---
 date: 2023-10-27 15:37
-description: Попыванов Сергей Геннадьевич. Биография. Контакты. Резюме. Социальные сети.
+description: Попыванов Сергей Геннадьевич iOS-разработчик в Авито. Биография. Контакты. Резюме. Социальные сети. Самара
 tags: 
 path: about-popyvanov-sergey
 ---
