--- a/Content/posts/эргономика рабочего места.md
+++ b/Content/posts/эргономика рабочего места.md
@@ -55,18 +55,19 @@ allowfullscreen></iframe>
 
 У меня были особые требования. Стол до этого стоял на балконе и по ширине там был всего метр. А рамы для столов с электроподъемниками все шире. Но в целом я не настолько часто меняю положение стола, что меня покрутить ручку не обламывает. Видел, как кулибины используют шуруповерт для этого, но пока сил хватает. 
 
-На столе один экран - внешний монитор. Были эксперименты, когда ставил рядом экран ноутбука на кронштейне, но забил на это. В итоге стало удобнее большой экран по центру и от него подальше откатиться назад. Наколхозил подстольное крепление для сабвуфера и сверху стойку для саундбара.   
+На столе один экран - внешний монитор. Были эксперименты, когда ставил рядом экран ноутбука на кронштейне, но забил на это. В итоге стало удобнее большой экран по центру и от него подальше откатиться назад. Наколхозил подстольное крепление для сабвуфера и сверху стойку для саундбара.
 
-Из  стола:  
+Из плюсов:
 - стоимость
 - ширина (регулируется под столешницу)
 - нечему ломаться 
 - достаточно устойчив (до этого использовал стол с пневмоногой, он сильно качался)
 
-Из минусов:  
+Из минусов:
 - крутить рукой и достаточно шумно получается  
 
-### Беговая дорожка
+
+### Беговая дорожка  
  
 Беговая дорожка **WalkingPad C1**
 Хорошая моделька для своей стоимости. Как выяснил позже у мастера, который эту дорожку обслуживал - достаточно ремонтопригодна. Уже больше года использую. Дорожка раскладывается
