--- a/Content/posts/эргономика рабочего места.md
+++ b/Content/posts/эргономика рабочего места.md
@@ -45,7 +45,7 @@ allowfullscreen></iframe>
 В целом, когда одел очки стало комфортно работать на расстоянии больше метра от монитора. И стул на колесиках идеально вписывается. Отъехал на комфортное расстояние и хорошо. 
 
 **Вывод по стулу**:
-- навороченная альтернатива табуретке, на ней тоже дольше 40 мин ни просидишь
+- навороченная альтернатива табуретке, на ней тоже дольше 40 мин не просидишь
 - есть регулировка уровня наклона, можно добавлять динамику (когда на стуле буквально можно покачиваться как в седле), но все это практически не использую
 - подставка для клавиатуры делает из него мобильное рабочее место, можно и с ноутбуком сидеть (только осторожно, чтобы не улетел)
 
