--- a/Content/posts/эргономика рабочего места.md
+++ b/Content/posts/эргономика рабочего места.md
@@ -125,7 +125,7 @@ allowfullscreen></iframe>
 ![](https://habrastorage.org/webt/_y/0q/k3/_y0qk3j4qjigv-pm6azscuvmoyg.png)
 
 ## Материалы на тему
-https://www.youtube.com/watch?v=jld6BSQfDnk - разрзаботчик, который работает лежа. Вариант, который все никак не попробую
+ [разработчик](https://www.youtube.com/watch?v=jld6BSQfDnk), который работает лежа. Вариант, который все никак не попробую
 
 
 ## Куда дальше
