--- a/Content/posts/эргономика рабочего места.md
+++ b/Content/posts/эргономика рабочего места.md
@@ -124,12 +124,22 @@ allowfullscreen></iframe>
 
 ![](https://habrastorage.org/webt/_y/0q/k3/_y0qk3j4qjigv-pm6azscuvmoyg.png)
 
+## Первый стол на пневмоноге
+Иногда его использую. В принципе рабочий вариант. Самый главный минус - это устойчивость в вертикальном положении. 
+Чуда не происходит. Но такой стол очень мобилен, стильно смотрится, и не нужно никаких электроприводов, поднимается и опускается легко, даже, когда на нем установлен второй монитор. 
+
+Рекламный обзор на [ютубе](https://www.youtube.com/watch?v=WBo-TmzZ8o4)
+
+
+![](https://habrastorage.org/webt/xx/ih/gg/xxihggmc61hc77kat7qicr9b7aa.jpeg)
+
 ## Материалы на тему
  [разработчик](https://www.youtube.com/watch?v=jld6BSQfDnk), который работает лежа. Вариант, который все никак не попробую
 
 
 ## Куда дальше
 
+[[раздельная клавиатура, трекбол, трекпад, вертикальная мышь]] 
 [[сворачивающийся дневник - экстракт главных событий]]  
 [[бесплатный генератор Swift Publish блога на Netlify]]  
 [[обо мне]]
