--- a/Content/posts/карма.md
+++ b/Content/posts/карма.md
@@ -16,3 +16,6 @@ path: carma-physical
 
 Пока неоконченная мысль... по ходу опытов еще будет много на этот счет)))
 
+## Куда дальше
+[[куда дальше]] 
+
