--- a/Content/posts/куда дальше.md
+++ b/Content/posts/куда дальше.md
@@ -33,8 +33,13 @@ path: discover
 Для продвинутого использования и просто подчерпнуть идей:  
 
 [[сворачивающийся дневник - экстракт главных событий]]
-
-
 ## Полезно
 
 [[настройка vpn на vps хостинге с помощью Amnezia]]  
+
+## Мысли
+[[творчество и деньги]]
+[[карма]]
+
+## Swift
+[[каталог разработки iOS Swift]]
