--- a/Content/posts/творчество и деньги.md
+++ b/Content/posts/творчество и деньги.md
@@ -17,3 +17,7 @@ path: creative-vs-money
 
 ![](https://habrastorage.org/webt/l8/96/up/l896upkprkalp0szlrhqx-t0jzg.jpeg)
 
+## Куда дальше
+
+[[сворачивающийся дневник - экстракт главных событий]]
+[[карма]]
