посты из телеги в блог

--- a/Content/posts/призвание - дело жизни.md
+++ b/Content/posts/призвание - дело жизни.md
@@ -18,5 +18,6 @@ path:
 
 Поделитесь в заметках, как выбирали то дело, которым занимаетесь сейчас
 
+[Обсудить можно в ТГ](https://t.me/serg_popyvanov_blog/41)
 ## Источники
 [Заметка в ВК Мой Путь](https://vk.com/wall193975491_7693)
