--- a/Content/posts/сложные движения - эволюция и терапия.md
+++ b/Content/posts/сложные движения - эволюция и терапия.md
@@ -1,30 +1,29 @@
 ---
 date: 2024-01-18 21:353
-description: описание статьи
+description: и почему же тянет к барабанам?
 tags: 
 path: drums-motion-therapy
 ---
 # Сложные движения - эволюция и терапия
 
-Мне понравилась концепция, что человека как вид эволюция "возвела на вершину" благодаря тому, что он встал на две ноги. Именно такое строение тела заставляет включаться десятки мышц, стабилизаторов, чтобы мы просто стояли. А когда двигаемся, так вообще, в нашей черепной коробке просто фейерверк происходит. Сложные движения и конкурентная среда - в итоге сделали нас социальными. То есть поговорка, что "труд сделал из обезьяны человека" в каком-то смысле про это. 
+Мне понравилась концепция, что человека как вид эволюция "возвела на вершину" благодаря тому, что он **встал на две ноги**. Именно такое строение тела заставляет включаться десятки мышц, стабилизаторов, чтобы мы просто стояли. А когда двигаемся, так вообще, в нашей черепной коробке просто фейерверк происходит. Сложные движения и конкурентная среда - в итоге сделали нас социальными. То есть поговорка, что "труд сделал из обезьяны человека" в каком-то смысле про это. 
 
-И сложно представить, какую сложность к этим процессам в голове добавляют чувства: слух, зрение, обоняние, осязание. И это мы еще не стали размышлять ~~а тварь ли я дрожащая~~. Если совсем упростить, то наши мыслительные процессы надстраиваются над движением и эмоциями. Красивая концепция, которая многое объясняет! ))) По крайней мере мне. 
+И сложно представить, какую сложность к этим процессам в голове добавляют **чувства: слух, зрение, обоняние, осязание**. И это мы еще не стали размышлять а тварь ли я дрожащая. Если совсем упростить, то наши **мыслительные процессы надстраиваются над движением и эмоциями**. Красивая концепция, которая многое объясняет! ))) По крайней мере мне. 
 
-А технологии развиваются со скоростью света. Эволюция же чуток помедленнее.... Технологии делают все, чтобы я как можно меньше двигался. А мой организм явно мудрее меня, поэтому он тянется к танцам, спортзалу, йоге, музыкальным инструментам, вышиванию крестиком... 
+А технологии развиваются со скоростью света. Эволюция же чуток помедленнее.... **Технологии делают все**, чтобы я как можно **меньше двигался**. А мой организм явно мудрее меня, поэтому он тянется к танцам, спортзалу, йоге, музыкальным инструментам, вышиванию крестиком... 
 
-Стало понятно, почему меня манят барабаны. Везде, где видел живое выступление музыкальных групп - взгляд приковывался к этому осьминогу с палками. И цитата Дома Фомуларо, известнейшего преподавателя по барабанам, тому подтверждение: "Я верю, что чаще не мы выбираем инструмент, а он нас".  Организм мудрее, он хочет жить и поэтому делает все для этого, подсказывая даже увлечения.
+Стало понятно, **почему меня манят барабаны**. Везде, где видел живое выступление музыкальных групп - взгляд приковывался к этому осьминогу с палками. И цитата Дома Фомуларо, известнейшего преподавателя по барабанам, тому подтверждение: "**Я верю, что чаще не мы выбираем инструмент, а он нас**".  Организм мудрее, он хочет жить и поэтому делает все для этого, подсказывая даже увлечения (= терапию). 
 
-Небольшая реклама барабанов, но на самом деле сюда можно подставить практические любое хобби, к которому тянет:
-- координация конечностей - двигать одновременно всеми конечностями весьма сложно, мозг скрипит, а потом кайф
-- активизируются оба полушария мозга: тут и левая, и правая часть туловища, и внутренний метроном, и ощущение музыки
+🥁 Небольшая **реклама барабанов**, но на самом деле сюда можно подставить практические любое хобби, к которому тянет:
+- **координация конечностей** - двигать одновременно всеми конечностями весьма сложно, мозг скрипит, а потом кайф
+- **активизируются оба полушария мозга**: тут и левая, и правая часть туловища, и внутренний метроном, и ощущение музыки
 - явно активно участвует слух, зрение, осязание, добавляя "сложности" к процессу
 - и совсем тонкие материи - это взаимодействие с другими участниками группы: держать ритм, передавать эмоции через инструмент
 
 Что тут рассказывать? Лучше попробовать! Найти преподавателя в своем городе не проблема, сходить на пробное занятие и ощутить на себе)))
 
 А социальные танцы (сальса, бачата, сон и др.) включает в себя еще отношения мужского и женского начала, а это, похоже, тема следующего поста. 
-Накидайте в комменты от чего вас прет прямо сейчас?
-
+Накидайте в [комменты](https://t.me/serg_popyvanov_blog/44) от чего вас прет прямо сейчас?
 
 
 ![](https://habrastorage.org/webt/tx/e9/tl/txe9tlmqr2ifkdy-o3ao8jfeqm0.jpeg)
