--- a/Content/posts/куда дальше.md
+++ b/Content/posts/куда дальше.md
@@ -31,8 +31,7 @@ path: discover
 
 ## Что можно накрутить в Obsidian
 Для продвинутого использования и просто подчерпнуть идей:  
-
-[[сворачивающийся дневник - экстракт главных событий]]
+- [[сворачивающийся дневник - экстракт главных событий]]
 ## Полезно
 
 [[настройка vpn на vps хостинге с помощью Amnezia]]  
