--- a/Content/posts/раздельная клавиатура, трекбол, трекпад, вертикальная мышь.md
+++ b/Content/posts/раздельная клавиатура, трекбол, трекпад, вертикальная мышь.md
@@ -6,7 +6,7 @@ path: ergo-keyboard-trackball-trackpad
 ---
 # Раздельная клавиатура, трекбол, трекпад, вертикальная мышь
 
-Помимо экспериментов с [[эргономика рабочего места]]. Экспериментировал с устройствами ввода. 
+Помимо экспериментов с [[эргономика рабочего места]] экспериментировал с устройствами ввода. 
 
 ## Клавиатура
 
@@ -47,7 +47,7 @@ path: ergo-keyboard-trackball-trackpad
 
 ![](https://habrastorage.org/webt/0w/rp/hk/0wrphky-5fmx2dirhu7wdksqfnm.jpeg)
 
-За счет "вогнутости" внутреннего слоя предотвращается залом кисти, плюсом большой палец может делать больше, чем просто жать пробел. 
+За счет "вогнутости" внутреннего слоя отсутствует залом кисти, плюсом большой палец может делать больше, чем просто жать пробел. 
 
 ![](https://habrastorage.org/webt/jw/fx/g_/jwfxg_t2zph6ca1cwlcd7zhjn54.jpeg)
 
@@ -83,7 +83,7 @@ path: ergo-keyboard-trackball-trackpad
 
 ### Клавиатура Cantor (40% QMK)
 Это уже проводная клавиатура, которая мне понадобилась для организации еще одного мобильного места, в котором использую трекбол, об этом ниже. 
-На этой клавиатуре кнопок еще меньше на 2 чем в Jian, но это легко поправимо. 
+На этой клавиатуре кнопок еще меньше на 2 чем в Jian. 
 
 ## Мышь -> Трекпад -> Трекбол
 
@@ -120,7 +120,6 @@ Apple Magic Trackpad отлично поместился на клавиатур
 [Layout для Kinesis Essential с Home Row Mode](https://github.com/flyer2001/qmk_firmware/blob/kinesis80/keyboards/kinesis80/keymaps/quartz64/keymap.c) 
 [Layout для Jian (ZMK) с Home Row Mode и слоями для раскладки Диктор](https://github.com/flyer2001/jian_zmk/blob/master/config/jian.keymap)
 Layout для Cantor - еще в работе
-
 
 ## Куда дальше?
 
