--- a/Content/posts/сворачивающийся дневник - экстракт главных событий.md
+++ b/Content/posts/сворачивающийся дневник - экстракт главных событий.md
@@ -12,7 +12,7 @@ path: folding-diary
 
 Идея проста: каждый день вечером **фиксируешь**  **главные события дня** (впечатления, разговоры, мысли, идеи, поездки, случаи и т.д.). Специально не акцентирую на этом моменте, потому что понимание главного события дня у каждого человека очень разное. 
 
-В конце недели "сворачиваешь неделю", выбирая **главные события из недели**. Ну и по аналогии в конце месяца "сворачиваешь" недели (**главные события месяц**а), в конце года - год ))) Всё просто, но очень эффективно. Через какое-то время появляется привычка — **фиксировать главное**. И эта привычка даже просто фиксации помогает увеличивать количество главных событий. Увеличивается и частота таких событий и «главность» )) — проверено на себе.
+В конце недели "сворачиваешь неделю", выбирая **главные события из недели**. Ну и по аналогии в конце месяца "сворачиваешь" недели (**главные события месяца**), в конце года - год. Всё просто, но очень эффективно. Через какое-то время появляется привычка — **фиксировать главное**. И эта привычка даже просто фиксации помогает увеличивать количество главных событий. Увеличивается и частота таких событий и «главность» — проверено на себе.
 
 И обычно в новогодние праздники "сворачиваю год" - прекрасное время для ретроспективы. Но, бывают и противопоказания)) Один мой знакомый чуть не забухал, когда после недели примерно понял, что ничего главного в его жизни не происходит... 
 
@@ -20,6 +20,11 @@ path: folding-diary
 
 Есть мое видео, как [настроить дневник в Obsidian](https://www.youtube.com/watch?v=Eiyat74nTz0&list=PLx__CcfA6f78CQldU-25yGUMeZ5AQHul-&index=2), и еще одно, где я делюсь чего можно накрутить в Obsidian, в том числе [показываю как организован сворачивающийся дневник](https://www.youtube.com/watch?v=EronU_b0f6A&list=PLx__CcfA6f78CQldU-25yGUMeZ5AQHul-&index=3)
 
+## Куда дальше
+
+[[обо мне]]
+[[сон и свет]]
+[[куда дальше]]
 <iframe width="560" height="315" src="https://www.youtube.com/embed/EronU_b0f6A?si=XZVLf4-K3wB61Dmu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 
 P.S. И если у вас появляется подобная привычка вести дневник, можно много всяких терапевтических штук накрутить (на какое-то время, для определенных практик):
