--- a/Content/posts/сложные движения - эволюция и терапия.md
+++ b/Content/posts/сложные движения - эволюция и терапия.md
@@ -8,7 +8,7 @@ path: drums-motion-therapy
 
 Мне понравилась концепция, что человека как вид эволюция "возвела на вершину" благодаря тому, что он **встал на две ноги**. Именно такое строение тела заставляет включаться десятки мышц, стабилизаторов, чтобы мы просто стояли. А когда двигаемся, так вообще, в нашей черепной коробке просто фейерверк происходит. Сложные движения и конкурентная среда - в итоге сделали нас социальными. То есть поговорка, что "труд сделал из обезьяны человека" в каком-то смысле про это. 
 
-И сложно представить, какую сложность к этим процессам в голове добавляют **чувства: слух, зрение, обоняние, осязание**. И это мы еще не стали размышлять а тварь ли я дрожащая. Если совсем упростить, то наши **мыслительные процессы надстраиваются над движением и эмоциями**. Красивая концепция, которая многое объясняет! ))) По крайней мере мне. 
+И сложно представить, какую сложность к этим процессам в голове добавляют **чувства: слух, зрение, обоняние, осязание**. И это мы еще не стали размышлять а тварь ли я дрожащая. Если совсем у[]()простить, то наши **мыслительные процессы надстраиваются над движением и эмоциями**. Красивая концепция, которая многое объясняет! ))) По крайней мере мне. 
 
 А технологии развиваются со скоростью света. Эволюция же чуток помедленнее.... **Технологии делают все**, чтобы я как можно **меньше двигался**. А мой организм явно мудрее меня, поэтому он тянется к танцам, спортзалу, йоге, музыкальным инструментам, вышиванию крестиком... 
 
