--- a/Content/posts/стиль для блоков кода.md
+++ b/Content/posts/стиль для блоков кода.md
@@ -14,6 +14,8 @@ path: code-block-style
 - добавил плагин и стили - [подробности в PR ](https://github.com/flyer2001/myBlog/pull/9/files)
 
 
+ниже **было-стало**
+
 ![](https://habrastorage.org/webt/xy/z1/iv/xyz1ivi95ufvb2cexjstvdgbbzu.png)
 
 ## Куда дальше?
