--- a/Content/posts/творчество и деньги.md
+++ b/Content/posts/творчество и деньги.md
@@ -13,10 +13,7 @@ path: creative-vs-money
 
 И вполне закономерное развитие, когда окружающие признают "рублем" твое творчество. По мне, так это самое объективное выражение признания. Следующий уровень - это уже признание в среде профессионалов... но обычно это сильно позже.  
 
-Но не представляю, как можно проскочить это голосование рублем? Что думаете? Накидать можно [тут](https://t.me/serg_popyvanov_blog/34) 
-
-![](https://habrastorage.org/webt/l8/96/up/l896upkprkalp0szlrhqx-t0jzg.jpeg)
-
+Но не представляю, как можно проскочить это голосование рублем? Что думаете? Накидать можно 
 ## Куда дальше
 
 [[сворачивающийся дневник - экстракт главных событий]]
