--- a/Content/posts/эргономика рабочего места.md
+++ b/Content/posts/эргономика рабочего места.md
@@ -6,7 +6,7 @@ path: ergonomic-setup-walkdesk
 ---
 # Эргономика рабочего места
 
-Мне нравится концепция, что **счастье - это просто смена состояний.**   
+Мне нравится концепция, что **счастье - это просто смена состояния.**   
 
 На видео показал как примерно выглядит набор вариантов. А ниже подробно опишу чуть подробнее.
 
@@ -36,9 +36,9 @@ allowfullscreen></iframe>
 
 ![](https://habrastorage.org/webt/6w/vx/q9/6wvxq9s7gldhjuedyvw7tfpnkuw.png)
 
-Основная **цель стула**-седла, если убрать весь маркетинг - это **не дать  долго на нем посидеть**. И с этой задачей он справляется на ура. Максимум 40 мин и это уже после года использования. Первое время трудно и 20 мин. просидеть. 
+Основная **цель стула**-седла, если убрать весь маркетинг, это **не дать долго на нем посидеть**. И с этой задачей он справляется на ура. Максимум 40 мин и это уже после года использования. Первое время трудно и 20 мин. просидеть. 
 
-Спинка мной не используется. Видел кейсы, когда разворачивают стул, используют боковушки для опоры локтей. Если именно хотите стул седло, то лучше смотреть модели без спинок. 
+Спинка мной не используется. Видел кейсы, когда разворачивают стул, используют боковушки спинки для опоры локтей. Если именно хотите стул седло, то лучше смотреть модели без спинок. 
 
 Заказал [подставку для клавиатуры с Али,](https://aliexpress.ru/item/32907768187.html?spm=a2g2w.orderdetail.0.0.30594aa6pWnVmO&sku_id=12000020737416452) которая крепится за основание стула. И именно эта конструкция позволяет использовать подставку для работы стоя. 
 
@@ -53,7 +53,7 @@ allowfullscreen></iframe>
 ### Подстолье
 Заказывал [подстолье на KazanExpress](https://kazanexpress.ru/product/reguliruemaya-rama-dlya-1904786) (ребята производители сказали, что самый выгодный вариант + кешбек от Backit можно словить).
 
-У меня были особые требования. Стол до этого стоял на балконе и по ширине там был всего метр. А рамы для столов с электроподъемниками все шире. Но в целом я не настолько часто меняю положение стола, что меня покрутить ручку не обламывает. Видел, как кулибины используют шуруповерт для этого, но пока сил хватает. 
+У меня были особые требования. Стол до этого стоял на балконе и по ширине там был всего метр. А рамы для столов с электроподъемниками такой ширины не нашел. В целом я не настолько часто меняю положение стола и покрутить ручку не обламывает. Видел, как кулибины используют шуруповерт для этого, но пока сил хватает. 
 
 На столе один экран - внешний монитор. Были эксперименты, когда ставил рядом экран ноутбука на кронштейне, но забил на это. В итоге стало удобнее большой экран по центру и от него подальше откатиться назад. Наколхозил подстольное крепление для сабвуфера и сверху стойку для саундбара.
 
@@ -64,13 +64,12 @@ allowfullscreen></iframe>
 - достаточно устойчив (до этого использовал стол с пневмоногой, он сильно качался)
 
 Из минусов:
-- крутить рукой и достаточно шумно получается  
-
+- нужно крутить рукой  
 
 ### Беговая дорожка  
  
 Беговая дорожка **WalkingPad C1**
-Хорошая моделька для своей стоимости. Как выяснил позже у мастера, который эту дорожку обслуживал - достаточно ремонтопригодна. Уже больше года использую. Дорожка раскладывается
+Хорошая моделька для своей стоимости. Как выяснил позже у мастера, который эту дорожку обслуживал - достаточно ремонтопригодна. Уже больше года использую, даже взял вторую такую. Дорожка складывается. 
 
 Работать стоя и во время ходьбы - штука, к которой надо привыкнуть. Сначала во время ходьбы я мог только участвовать (очень вовлеченно) в рабочих созвонах. А позже приловчился держать мышку и клавиатуру на ходу. Но, честно, мозжечок сначала сходит с ума. Как? Печатать, смотреть в монитор и еще не слететь с дорожки при этом)))
 
@@ -84,7 +83,7 @@ allowfullscreen></iframe>
 
 Урвал себе на Авито два кресла Поэнг с подставкой для ног. Перетянул обивку и как новенькие. Помню у кого-то посидел на таком и влюбился. 
 
-Стараюсь сильно не злоупотреблять таким вариантом. Но не всегда ты бодр и иногда хочется почилить. Стараюсь напоминать себе будильником, то надо размяться. 
+Стараюсь сильно не злоупотреблять таким вариантом. Но не всегда ты бодр и иногда хочется почилить. Стараюсь напоминать себе будильником, что надо размяться. 
 
 Стол позволяет отрегулировать удобную высоту, а кронштейн - чуть-чуть наклонить экран. 
 
@@ -125,7 +124,7 @@ allowfullscreen></iframe>
 ![](https://habrastorage.org/webt/_y/0q/k3/_y0qk3j4qjigv-pm6azscuvmoyg.png)
 
 ## Первый стол на пневмоноге
-Иногда его использую. В принципе рабочий вариант. Самый главный минус - это устойчивость в вертикальном положении. 
+Иногда его использую. В принципе рабочий вариант. Самый главный минус - это слабая устойчивость в вертикальном положении. 
 Чуда не происходит. Но такой стол очень мобилен, стильно смотрится, и не нужно никаких электроприводов, поднимается и опускается легко, даже, когда на нем установлен второй монитор. 
 
 Рекламный обзор на [ютубе](https://www.youtube.com/watch?v=WBo-TmzZ8o4)
@@ -135,7 +134,6 @@ allowfullscreen></iframe>
 
 ## Материалы на тему
  [разработчик](https://www.youtube.com/watch?v=jld6BSQfDnk), который работает лежа. Вариант, который все никак не попробую
-
 
 ## Куда дальше
 
